@@ -31,7 +31,7 @@ class CFfile(object):
         self.fname = fname
         self.file = None
         self.timescale = 0.001
-        self.mapvarname = 'mapping'
+        self.mapvarname = None
 
         self.__projection = None
         self.__ll_xy_changed = False
@@ -101,6 +101,13 @@ class CFfile(object):
             return ''        
     history = property(__get_history,__set_history)
 
+    # wrap projection stuff
+    def __do_proj(self,val,inv=False):
+        if self.projection == 'lin':
+            return val
+        else:
+            return self.projection.proj4(val,inv=inv)
+
     # lower left corner in projected coordinates
     def __get_ll_xy(self):
         return self.__ll_xy
@@ -114,10 +121,10 @@ class CFfile(object):
     # and geographic coordinates
     def __get_ll_geo(self):
         if self.__ll_xy_changed:
-            self.__ll_geo = self.projection.proj4(self.__ll_xy,inv=True)
+            self.__ll_geo = self.__do_proj(self.__ll_xy,inv=True)
         return self.__ll_geo
     def __set_ll_geo(self,val):
-        self.__set_ll_xy(self.projection.proj4(val))
+        self.__set_ll_xy = self.__set_ll_xy(self.__do_proj(val))
         self.__ll_xy_changed = False
         self.__ll_geo = val
     ll_geo = property(__get_ll_geo,__set_ll_geo)
@@ -135,10 +142,10 @@ class CFfile(object):
     # and geographic coordinates
     def __get_ur_geo(self):
         if self.__ur_xy_changed:
-            self.__ur_geo = self.projection.proj4(self.__ur_xy,inv=True)
+            self.__ur_geo = self.__do_proj(self.__ur_xy,inv=True)
         return self.__ur_geo
     def __set_ur_geo(self,val):
-        self.__set_ur_xy(self.projection.proj4(val))
+        self.__set_ur_xy(self.__do_proj(val))
         self.__ur_xy_changed = False
         self.__ur_geo = val
     ur_geo = property(__get_ur_geo,__set_ur_geo)
@@ -146,18 +153,21 @@ class CFfile(object):
     # get projection info
     def __get_projection(self):
         if self.__projection == None:
-            try:
-                self.__projection = getCFProj(self.file.variables[self.mapvarname])
-            except:
-                raise RuntimeError, 'No projection selected yet'
+            if self.mapvarname is not None:
+                try:
+                    self.__projection = getCFProj(self.file.variables[self.mapvarname])
+                except:
+                    raise RuntimeError, 'No projection selected yet'
+            else:
+                self.__projection = 'lin'
         return self.__projection
     def __set_projection(self,proj):
         if self.mapvarname not in self.file.variables.keys():
             varmap=self.file.createVariable(self.mapvarname,'c',())
         copyCFMap(proj,varmap)
         self.__projection = getCFProj(proj)
-        self.__ll_geo = self.projection.proj4(self.__ll_xy,inv=True)
-        self.__ur_geo = self.projection.proj4(self.__ur_xy,inv=True)
+        self.__ll_geo = self.__do_proj(self.__ll_xy,inv=True)
+        self.__ur_geo = self.__do_proj(self.__ur_xy,inv=True)
     projection = property(__get_projection,__set_projection)
 
     # get aspect ratio
@@ -165,14 +175,23 @@ class CFfile(object):
         return (self.ur_xy[1]-self.ll_xy[1])/(self.ur_xy[0]-self.ll_xy[0])
     aspect_ratio = property(__get_aspect)
 
+    # get grid spacing
+    def __get_deltax(self):
+        return (self.file.variables['x1'][1]-self.file.variables['x1'][0])
+    deltax = property(__get_deltax)
+    def __get_deltay(self):
+        return (self.file.variables['y1'][1]-self.file.variables['y1'][0])
+    deltay = property(__get_deltay)
+    
+
     def reset_bb(self):
         """Reset bounding box."""
         self.__ll_xy_changed = False
         self.__ll_xy = [self.file.variables['x1'][0],self.file.variables['y1'][0]]
-        self.__ll_geo = self.projection.proj4(self.__ll_xy,inv=True)
+        self.__ll_geo = self.__do_proj(self.__ll_xy,inv=True)
         self.__ur_xy_changed = False
         self.__ur_xy = [self.file.variables['x1'][-1],self.file.variables['y1'][-1]]
-        self.__ur_geo = self.projection.proj4(self.__ur_xy,inv=True)
+        self.__ur_geo = self.__do_proj(self.__ur_xy,inv=True)
 
     def close(self):
         """Close CF file."""
