@@ -38,7 +38,8 @@ data_files = [('share/PyCF/',['data/ice.cpt',
               ('bin',['progs/add_projinfo.py',
                       'progs/create_topo.py',
                       'progs/plotCFvar.py',
-                      'progs/plotEISvar.py'])]
+                      'progs/plotEISvar.py',
+                      'progs/plotSpot.py'])]
 
 setup (name = "PyCF",
        version = "0.0",
